syntax = "proto3";

package iunite.club.srv.message.sms;

service SMS {
  rpc SendVerifyCode(SendVerifyCodeRequest) returns(SendResponse) {}
  rpc ValidateMobileCode(ValidateMobileCodeRequest) returns(ValidateResponse) {}
}

message ValidateMobileCodeRequest {
  string Mobile = 1;
  string Code = 2;
}

message ValidateResponse {
  bool OK = 1;
}

message SendVerifyCodeRequest {
  string Mobile = 1;
  string Type = 2;
}

message SendResponse {
  bool OK = 1;
}